tests/ui/trait_object_missing_carrier.stderr
error: trait_object(Hash) needs `DynHash` as a supertrait; write `trait Foo: DynHash`
 --> tests/ui/trait_object_missing_carrier.rs:7:7
  |
7 | trait Foo {
  |       ^^^
